Update markdown for clarity

--- a/24083010090_AdrianVedaDarmawan_MatdisA_2.ipynb
+++ b/24083010090_AdrianVedaDarmawan_MatdisA_2.ipynb
@@ -27,13 +27,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DdjorizVEbmx",
-        "outputId": "ad434277-a2d2-4bef-a6bb-cb28dbce33c0"
+        "outputId": "cb5d3e11-3aa5-4747-a862-ba9dad5b4da9"
       },
       "outputs": [
         {
@@ -100,7 +100,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Semua n >= 0 berlaku pada pernyataan 1"
+        "Semua $n \\geq 0$ berlaku pada pernyataan 1"
       ],
       "metadata": {
         "id": "76ERxk4jLnVM"
@@ -116,9 +116,10 @@
         "def kebenaran2(kiri, kanan):\n",
         "  return kiri > kanan\n",
         "def ujiString2(x):\n",
-        "  return f\"(n = {i}) {sisiKiri2(i)} ?> {sisiKanan2(i)} ({kebenaran2(sisiKiri2(i), sisiKanan2(i))})\"\n",
+        "  return f\"(n = {x}) {sisiKiri2(x)} ?> {sisiKanan2(x)} ({kebenaran2(sisiKiri2(x), sisiKanan2(x))})\"\n",
         "\n",
         "\n",
+        "print(\"----- n >= 0 -----\")\n",
         "for i in range(10):\n",
         "  print(ujiString2(i))\n",
         "print()\n",
@@ -126,21 +127,32 @@
         "  print(ujiString2(i))\n",
         "print()\n",
         "for i in range(100, 1000, 100):\n",
-        "  print(ujiString2(i))"
+        "  print(ujiString2(i))\n",
+        "print(\"\\n\"*4)\n",
+        "print(\"----- n < 0 -----\")\n",
+        "for i in range(1, 10):\n",
+        "  print(ujiString2(-i))\n",
+        "print()\n",
+        "for i in range(10, 100, 10):\n",
+        "  print(ujiString2(-i))\n",
+        "print()\n",
+        "for i in range(100, 1000, 100):\n",
+        "  print(ujiString2(-i))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "G3QoFLlaLLyq",
-        "outputId": "200e1f66-abff-4a02-e2dc-a4bddcbb5934"
+        "outputId": "87114fba-0625-403a-a630-e5f4e0cccef0"
       },
-      "execution_count": 22,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "----- n >= 0 -----\n",
             "(n = 0) 1 ?> 0 (True)\n",
             "(n = 1) 2 ?> 1 (True)\n",
             "(n = 2) 4 ?> 4 (False)\n",
@@ -170,7 +182,42 @@
             "(n = 600) 4149515568880992958512407863691161151012446232242436899995657329690652811412908146399707048947103794288197886611300789182395151075411775307886874834113963687061181803401509523685376 ?> 360000 (True)\n",
             "(n = 700) 5260135901548373507240989882880128665550339802823173859498280903068732154297080822113666536277588451226982968856178217713019432250183803863127814770651880849955223671128444598191663757884322717271293251735781376 ?> 490000 (True)\n",
             "(n = 800) 6668014432879854274079851790721257797144758322315908160396257811764037237817632071521432200871554290742929910593433240445888801654119365080363356052330830046095157579514014558463078285911814024728965016135886601981690748037476461291163877376 ?> 640000 (True)\n",
-            "(n = 900) 8452712498170643941637436558664265704301557216577944354047371344426782440907597751590676094202515006314790319892114058862117560952042968596008623655407033230534186943984081346699704282822823056848387726531379014466368452684024987821414350380272583623832617294363807973376 ?> 810000 (True)\n"
+            "(n = 900) 8452712498170643941637436558664265704301557216577944354047371344426782440907597751590676094202515006314790319892114058862117560952042968596008623655407033230534186943984081346699704282822823056848387726531379014466368452684024987821414350380272583623832617294363807973376 ?> 810000 (True)\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "----- n < 0 -----\n",
+            "(n = -1) 0.5 ?> 1 (False)\n",
+            "(n = -2) 0.25 ?> 4 (False)\n",
+            "(n = -3) 0.125 ?> 9 (False)\n",
+            "(n = -4) 0.0625 ?> 16 (False)\n",
+            "(n = -5) 0.03125 ?> 25 (False)\n",
+            "(n = -6) 0.015625 ?> 36 (False)\n",
+            "(n = -7) 0.0078125 ?> 49 (False)\n",
+            "(n = -8) 0.00390625 ?> 64 (False)\n",
+            "(n = -9) 0.001953125 ?> 81 (False)\n",
+            "\n",
+            "(n = -10) 0.0009765625 ?> 100 (False)\n",
+            "(n = -20) 9.5367431640625e-07 ?> 400 (False)\n",
+            "(n = -30) 9.313225746154785e-10 ?> 900 (False)\n",
+            "(n = -40) 9.094947017729282e-13 ?> 1600 (False)\n",
+            "(n = -50) 8.881784197001252e-16 ?> 2500 (False)\n",
+            "(n = -60) 8.673617379884035e-19 ?> 3600 (False)\n",
+            "(n = -70) 8.470329472543003e-22 ?> 4900 (False)\n",
+            "(n = -80) 8.271806125530277e-25 ?> 6400 (False)\n",
+            "(n = -90) 8.077935669463161e-28 ?> 8100 (False)\n",
+            "\n",
+            "(n = -100) 7.888609052210118e-31 ?> 10000 (False)\n",
+            "(n = -200) 6.223015277861142e-61 ?> 40000 (False)\n",
+            "(n = -300) 4.909093465297727e-91 ?> 90000 (False)\n",
+            "(n = -400) 3.8725919148493183e-121 ?> 160000 (False)\n",
+            "(n = -500) 3.054936363499605e-151 ?> 250000 (False)\n",
+            "(n = -600) 2.409919865102884e-181 ?> 360000 (False)\n",
+            "(n = -700) 1.90109156629516e-211 ?> 490000 (False)\n",
+            "(n = -800) 1.499696813895631e-241 ?> 640000 (False)\n",
+            "(n = -900) 1.1830521861667747e-271 ?> 810000 (False)\n"
           ]
         }
       ]
@@ -178,7 +225,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Tidak semua n berlaku pada pernyataan 2. Yang tidak memenuhi pernyataan berada di titik n = 2 dan n = 3"
+        "Tidak semua $n$ berlaku pada pernyataan 2. Yang tidak memenuhi pernyataan berada di $2 \\leq n \\leq 4$, dan $n < 0$"
       ],
       "metadata": {
         "id": "GS-F6VV9L0_V"
