--- a/24083010090_AdrianVedaDarmawan_MatdisA_2.ipynb
+++ b/24083010090_AdrianVedaDarmawan_MatdisA_2.ipynb
@@ -1,29 +1,15 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "vhoKYffTFDJF"
+      },
       "source": [
         "Pernyataan yang diambil:\n",
         "1. $1 + 2 + 2^2 + 2^3 + ... + 2^n = 2^{n+1} - 1$ untuk semua $n ∈ Z, n \\geq 0$\n",
         "2. $2^n > n^2$ untuk semua $n ∈ Z$\n"
-      ],
-      "metadata": {
-        "id": "vhoKYffTFDJF"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -37,8 +23,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "(n = 0) 1 ?= 1 (True)\n",
             "(n = 1) 3 ?= 3 (True)\n",
@@ -99,46 +85,16 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Semua $n \\geq 0$ berlaku pada pernyataan 1"
-      ],
       "metadata": {
         "id": "76ERxk4jLnVM"
-      }
+      },
+      "source": [
+        "Semua $n \\geq 0$ berlaku pada pernyataan 1"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "def sisiKiri2(x):\n",
-        "  return 2**x\n",
-        "def sisiKanan2(x):\n",
-        "  return x**2\n",
-        "def kebenaran2(kiri, kanan):\n",
-        "  return kiri > kanan\n",
-        "def ujiString2(x):\n",
-        "  return f\"(n = {x}) {sisiKiri2(x)} ?> {sisiKanan2(x)} ({kebenaran2(sisiKiri2(x), sisiKanan2(x))})\"\n",
-        "\n",
-        "\n",
-        "print(\"----- n >= 0 -----\")\n",
-        "for i in range(10):\n",
-        "  print(ujiString2(i))\n",
-        "print()\n",
-        "for i in range(10, 100, 10):\n",
-        "  print(ujiString2(i))\n",
-        "print()\n",
-        "for i in range(100, 1000, 100):\n",
-        "  print(ujiString2(i))\n",
-        "print(\"\\n\"*4)\n",
-        "print(\"----- n < 0 -----\")\n",
-        "for i in range(1, 10):\n",
-        "  print(ujiString2(-i))\n",
-        "print()\n",
-        "for i in range(10, 100, 10):\n",
-        "  print(ujiString2(-i))\n",
-        "print()\n",
-        "for i in range(100, 1000, 100):\n",
-        "  print(ujiString2(-i))"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -146,11 +102,10 @@
         "id": "G3QoFLlaLLyq",
         "outputId": "87114fba-0625-403a-a630-e5f4e0cccef0"
       },
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "----- n >= 0 -----\n",
             "(n = 0) 1 ?> 0 (True)\n",
@@ -220,16 +175,62 @@
             "(n = -900) 1.1830521861667747e-271 ?> 810000 (False)\n"
           ]
         }
+      ],
+      "source": [
+        "def sisiKiri2(x):\n",
+        "  return 2**x\n",
+        "def sisiKanan2(x):\n",
+        "  return x**2\n",
+        "def kebenaran2(kiri, kanan):\n",
+        "  return kiri > kanan\n",
+        "def ujiString2(x):\n",
+        "  return f\"(n = {x}) {sisiKiri2(x)} ?> {sisiKanan2(x)} ({kebenaran2(sisiKiri2(x), sisiKanan2(x))})\"\n",
+        "\n",
+        "\n",
+        "print(\"----- n >= 0 -----\")\n",
+        "for i in range(10):\n",
+        "  print(ujiString2(i))\n",
+        "print()\n",
+        "for i in range(10, 100, 10):\n",
+        "  print(ujiString2(i))\n",
+        "print()\n",
+        "for i in range(100, 1000, 100):\n",
+        "  print(ujiString2(i))\n",
+        "print(\"\\n\"*4)\n",
+        "print(\"----- n < 0 -----\")\n",
+        "for i in range(1, 10):\n",
+        "  print(ujiString2(-i))\n",
+        "print()\n",
+        "for i in range(10, 100, 10):\n",
+        "  print(ujiString2(-i))\n",
+        "print()\n",
+        "for i in range(100, 1000, 100):\n",
+        "  print(ujiString2(-i))"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Tidak semua $n$ berlaku pada pernyataan 2. Yang tidak memenuhi pernyataan berada di $2 \\leq n \\leq 4$, dan $n < 0$"
-      ],
       "metadata": {
         "id": "GS-F6VV9L0_V"
-      }
+      },
+      "source": [
+        "Tidak semua $n$ berlaku pada pernyataan 2. Yang tidak memenuhi pernyataan berada di $2 \\leq n \\leq 4$, dan $n < 0$"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.13.2"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
